--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <table cellspacing="20">
-        <td>    <img src="images/yana.png" alt="Yana's picture"></td>
+        <td>    <img src="yana.png" alt="Yana's picture"></td>
         <td>    <h1>Yana K</h1>
                 <p><em><strong>Marketer</strong> at IT comany in edu domain.</em> </p>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br> Recusandae quibusdam ratione commodi molestias sint reiciendis quidem nobis adipisci architecto. <br> I magnam repudiandae reiciendis voluptates nemo perspiciatis sunt esse ducimus!</p>
